Added moving pizza image

--- a/Pizza_Project/Pizza.html
+++ b/Pizza_Project/Pizza.html
@@ -8,7 +8,11 @@
         <script src="Pizza_Javascript/Pizza.js" defer></script>
     </head>
     <body>
+        <script>
+            document.body.classList.add('fade-out');
+        </script>
         <div id="menuBG">
+            <img src="./images/pizza.png" alt="A slice of pizza">
             <h1 style="margin:0 0 0 20px;">Pizza Drill Tutorial</h1>
             <input id="btnOrder" type="button" onclick="getReceipt()" value="Place Order">
             <form id="frmMenu">
